--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div id="final-victory-screen" class="final-screen">
         <div class="confetti-container" id="confetti-container"></div>
         <div class="final-content">
-            <h1 class="final-title">BRAVO MEC !</h1>
+            <h1 class="final-title">YOUR GIFT !</h1>
             <div class="final-image-container">
                 <img src="https://i.postimg.cc/Q9pNgDpn/image.png" alt="Ton Cadeau" class="final-gift-image">
             </div>
@@ -94,4 +94,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
